@startuml
hide circle
skinparam linetype ortho

' =========================
' MAIN ENTITIES
' =========================

entity movie {
  + id : INT <<PK>>
  --
  title : VARCHAR
  release_year : INT
  imdb_rating : DECIMAL(3,1)
  custom_rating : DECIMAL(3,1)
  director_id : INT <<FK>>
}

note right
 <b>Note</b>
 Id is hash(title,director,year)
end note

entity person {
  + id : INT <<PK>>
  --
  first_name : VARCHAR
  last_name : VARCHAR
  birth_date : DATE
}

note right
 <b>Note</b>
 Id is hash(first_name, last_name, birth_date)
end note

entity genre {
  + id : INT <<PK>>
  --
  name : VARCHAR <<UNIQUE>>
}

note right
 <b>Note</b>
 Id is hash(genre_name)

 Genres are : "action", "adventure", "comedy",
 "crime", "mystery", "fantasy", "historical",
 "historical fiction", "horror", "romance",
 satire", "science fiction", "speculative",
 "thriller", "isekai", "western"
end note

entity movie_genre {
  + movie_id : INT <<PK, FK>>
  + genre_id : INT <<PK, FK>>
}

entity movie_cast {
  + movie_id : INT <<PK, FK>>
  + person_id : INT <<PK, FK>>
  --
  role_name : VARCHAR
}

entity personal_rating {
  + id : INT <<PK>>
  --
  movie_id : INT <<FK>>
  directing : TINYINT
  photography_scenery : TINYINT
  acting : TINYINT
  scenario : TINYINT
  music : TINYINT
  bonus_rating : TINYINT
  loved : BOOLEAN
  comment : TEXT
  created_at : TIMESTAMP
}

note right
 <b>Note</b>
 Id is hash(movie_id, created_at)
end note

' =========================
' RELATIONSHIPS
' =========================

movie }o--|| person : "directed by"
movie ||--o{ movie_cast : "has actors"
person ||--o{ movie_cast : "acts in"

movie ||--o{ movie_genre : "categorized as"
genre ||--o{ movie_genre : "used by"

movie ||--o{ personal_rating : "has ratings"

@enduml
